--- a/web/themes/custom/durhamtech/scss/modules/_layouts.scss
+++ b/web/themes/custom/durhamtech/scss/modules/_layouts.scss
@@ -24,7 +24,7 @@ section.container, section.program, section.career, .node--type-landing_page, .p
   }
 }
 
-.page-node-type-new-article .container, .page-node-type-event .container {
+.page-node-type-new-article .container {
   padding-bottom: $section-spacing-sm;
   /*padding-top: $section-spacing-sm;*/
 
@@ -35,15 +35,36 @@ section.container, section.program, section.career, .node--type-landing_page, .p
 
 }
 
-.page-node-type-event .footer-bottom .container {
-  padding-bottom: 0;
+.page-node-type-event .main-container.container {
+  padding-bottom: $section-spacing-sm;
   /*padding-top: $section-spacing-sm;*/
 
   @media #{$tablet} {
-    padding-bottom: 0;
+    padding-bottom: $section-spacing-lg;
     /*padding-top: $section-spacing-lg;*/
   }
+
 }
+
+/*.page-node-type-event .secondary-nav .container {
+  padding-bottom: 0;
+  !*padding-top: $section-spacing-sm;*!
+
+  @media #{$tablet} {
+    padding-bottom: 0;
+    !*padding-top: $section-spacing-lg;*!
+  }
+}
+
+.page-node-type-event .footer-bottom .container {
+  padding-bottom: 0;
+  !*padding-top: $section-spacing-sm;*!
+
+  @media #{$tablet} {
+    padding-bottom: 0;
+    !*padding-top: $section-spacing-lg;*!
+  }
+}*/
 
 .page-node-type-event .footer-top.container {
   padding-bottom: 15px;
